--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
 *{
     margin: 0%;
     padding: 0%;
+}
+
+body{
+    font-family: 'Akaya Telivigala',sans-serif;
+    font-size: 25px;
+}
+
+.container{
+    width:  300px;
+    max-height: 300px;
+    background-color: antiquewhite; 
+    margin: 10px 10px;
+    border-radius: 5px;
+}
+
+.joke{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    color: black;
+    margin: 5px;
 }
